--- a/_sass/screens/_home.scss
+++ b/_sass/screens/_home.scss
@@ -1,12 +1,13 @@
 .home {
-  display: grid;
-  grid-template-rows: 95vh 1fr;
-  align-items: center;
+  margin-top:4rem;
 }
 
 .home .conference-announcement,
 .home .mailing-list,
-.home .social-platform {
+.home .social-platform,
+.home .cfp,
+.home .sponsors,
+.home header {
   text-align: center;
 
   @include media-breakpoint-up('md') {
@@ -14,11 +15,15 @@
     @include make-col-offset(3);
   }
 }
+.home header img {
+  max-width:200px;
+}
 
-.home .conference-announcement {
-  @include media-breakpoint-up('md') {
-    padding-bottom: 4rem;
-  }
+.home .conference-announcement,
+.home .cfp,
+.home .sponsors,
+.home header {
+    padding-bottom: 2.5rem;
 }
 
 .home .mailing-list {
