--- a/src/_components/icon.liquid
+++ b/src/_components/icon.liquid
@@ -1,3 +1,3 @@
-<svg class="icon{% if include.class %} {{ include.class }}{% endif %}" viewBox="0 0 {% if include.width %}{{include.width}}{% else %}32{% endif %} {% if include.height %}{{include.height}}{% else %}32{% endif %}">
-  <use xlink:href="#{{ include.icon }}"></use>
+<svg class="icon{% if class %} {{ class }}{% endif %}" viewBox="0 0 {% if width %}{{width}}{% else %}32{% endif %} {% if height %}{{height}}{% else %}32{% endif %}">
+  <use xlink:href="#{{ icon }}"></use>
 </svg>
