--- a/src/_components/list_social_platform.liquid
+++ b/src/_components/list_social_platform.liquid
@@ -4,8 +4,8 @@
     <a href="{{ social_platform.url }}" target="_blank" class="list-social-platform__link">
       {% capture socialIcon %}{{ social_platform.icon | prepend: 'icon-' }}{% endcapture %}
       {% capture className %}{{ social_platform.icon | prepend: 'list-social-platform__icon--' | prepend: ' ' | prepend: 'list-social-platform__icon' | append: ' ' | append: 'icon--xs' }}{% endcapture %}
-      {% render "icon" icon=socialIcon class=className %}
-      <span class="sr-only">{{ social_platform.name }}</span>
+      {% render "icon", icon: socialIcon, class: className %}
+      <span class="visually-hidden">{{ social_platform.name }}</span>
     </a>
   </li>
   {% endfor %}
