--- a/frontend/stylesheets/error.scss
+++ b/frontend/stylesheets/error.scss
@@ -1,76 +1,19 @@
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}[hidden],template{display:none}
+// Vendor
 
-.layout-error {
-  padding: 0 5%;
+@import 'variables';
+@import 'vendor/bootstrap';
 
-  font-family: 'Work Sans', -apple-system, 'Segoe UI', sans-serif;
-}
+// Application
 
-.error {
-  margin-top: 100px;
-}
+@import 'functions/sizing';
 
-.error hr {
-  width: 250px;
-  height: 1px;
-  margin: 35px 0;
+@import 'mixins/line-height';
 
-  border: none;
-}
+@import 'base/font';
+@import 'base/root';
+@import 'base/typography';
 
-.error__head-line {
-  font-size: 48px;
-  line-height: 60px;
-  letter-spacing: -1px;
-  margin-bottom: 5px;
-}
+@import 'layouts/error';
 
-.error__sub-header {
-  margin: 0;
-  font-size: 30px;
-  line-height: 46px;
-}
+@import 'components/error';
 
-.error__context {
-  font-size: 16px;
-  line-height:27px;
-}
-
-.error__action {
-  margin-top: 45px;
-  overflow: hidden;
-}
-
-.error__action a {
-  display: inline-block;
-  padding: 8px 30px 9px;
-
-  font-size: 14px;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #fff;
-
-  border: 2px solid #f83548;
-  border-radius: 99px;
-}
-
-@media screen and (max-width: 768px) {
-  .error__action a {
-    padding: 8px 12px 9px;
-  }
-}
-
-.error__action a:not(:last-child) {
-  margin-right:25px;
-}
-
-.btn {
-  background-color: #2c2d30;
-}
-
-.btn.btn--outline {
-  color: #f83548;
-  background: transparent;
-  border-color: #f83548;
-}
