--- a/frontend/stylesheets/layouts/_default.scss
+++ b/frontend/stylesheets/layouts/_default.scss
@@ -1,6 +1,6 @@
 .layout-default .app-content,
 .layout-default .app-footer {
-  .container {
+  > .container {
     @include make-container();
   }
 }
