--- a/src/_components/header.liquid
+++ b/src/_components/header.liquid
@@ -1,7 +1,7 @@
 <header class="app-header">
   <div class="container">
-    <div class="app-header__logo logo logo--text-icon">
+    <a href="/" class="app-header__logo logo logo--text-icon">
       <span class="sr-only">RubyConf TH {💎}</span>
-    </div>
+    </a>
   </div>
 </header>
