--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -23,5 +23,6 @@
 @import 'components/link';
 @import 'components/list';
 @import 'components/list-social-platform';
+@import 'components/logo';
 
 @import 'screens/home';
