Add base UI for the footer

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import 'layouts/default';
 
 @import 'components/app-footer';
+@import 'components/app-hero';
 @import 'components/btn';
 @import 'components/form';
 @import 'components/form-mailing-list';
