Add base UI for the text content

--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -9,3 +9,17 @@
     margin-top: 2rem;
   }
 }
+
+.home .cfp,
+.home .sponsors {
+  text-align: center;
+
+  &:not(:last-child) {
+    margin-bottom: 2rem
+  }
+
+  @include media-breakpoint-up('md') {
+    @include make-col(6);
+    @include make-col-offset(3);
+  }
+}
