--- a/frontend/stylesheets/layouts/_default.scss
+++ b/frontend/stylesheets/layouts/_default.scss
@@ -7,13 +7,27 @@
 }
 
 .layout-default .app-hero {
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 
   @include media-breakpoint-up('md') {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
   }
+  
+  
 }
 
 .layout-default .app-content {
   min-height: rem(400px);
+
+  &__text {
+    padding: 1.5rem 0;
+
+    @include media-breakpoint-up('md') {
+      padding: 3rem 0;
+    }
+  }
+}
+
+.layout-default .app-hero ~ .app-content__text {
+  padding-top: 0;
 }
