Add backgroun image for the home hero

--- a/frontend/stylesheets/components/_app-hero.scss
+++ b/frontend/stylesheets/components/_app-hero.scss
@@ -1,9 +1,13 @@
 .app-hero {
   display: flex;
   align-items: center;
-
   padding: 2rem 0;
+
   background-color: $primary;
+
+  &__text {
+    font-weight: 500;
+  }
 
   &,
   a {
