Add base layout for the 2022 event (#187)

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import 'layouts/default';
 
 @import 'components/app-footer';
+@import 'components/app-hero';
 @import 'components/btn';
 @import 'components/form';
 @import 'components/form-mailing-list';
@@ -23,5 +24,6 @@
 @import 'components/link';
 @import 'components/list';
 @import 'components/list-social-platform';
+@import 'components/logo';
 
 @import 'screens/home';
