Add UI component to list sponsors

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import 'components/link';
 @import 'components/list';
 @import 'components/list-social-platform';
+@import 'components/list-sponsor';
 @import 'components/logo';
 
 @import 'screens/home';
