Add the signed-up sponsors (#189)

--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -36,3 +36,13 @@
     @include make-col-offset(3);
   }
 }
+
+.home .sponsors {
+  .list-sponsor {
+    padding: 2rem 0;
+
+    &__company:nth-child(4) {
+      @include make-col-offset(1.5)
+    }
+  }  
+}
