style tweaks for 4 instead of 5 sponsors

--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -5,14 +5,14 @@
     @include make-col-ready();
     @include make-col(4);
 
-    &:not(:nth-child(-n+3)) {
-      margin-top: 1rem;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__link {
     display: block;
-    position: relative;
+    width:100%;
   }
 
   &__logo {
