--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-top:1em;
+    padding-bottom:1em;
   }
 
   &__link {
