--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -3,16 +3,18 @@
 
   &__company {
     @include make-col-ready();
-    @include make-col(4);
+    @include make-col(6);
 
-    &:not(:nth-child(-n+3)) {
-      margin-top: 1rem;
-    }
+    display: flex;
+    justify-content: center;
+
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
   &__link {
     display: block;
-    position: relative;
+    width:100%;
   }
 
   &__logo {
