Reset styles for links and list outside of main

--- a/src/_components/list_social_platform.liquid
+++ b/src/_components/list_social_platform.liquid
@@ -1,4 +1,4 @@
-<ul class="list-social-platform list--unstyled">
+<ul class="list-social-platform">
   {% for social_platform in social_platforms %}
   <li class="list-social-platform__item">
     <a href="{{ social_platform.url }}" target="_blank" class="list-social-platform__link">
