--- a/src/_components/list_sponsor.liquid
+++ b/src/_components/list_sponsor.liquid
@@ -1,4 +1,4 @@
-<ul class="list-sponsor list--unstyled">
+<ul class="list-sponsor">
   {% for sponsor in sponsors %}
   <li class="list-sponsor__company">
     <a href="{{ sponsor.url }}" title="{{ sponsor.name }} - {{ sponsor.about }}" target="_blank" class="list-sponsor__link">
