Add menu toggle for small screens

--- a/frontend/stylesheets/_variables.scss
+++ b/frontend/stylesheets/_variables.scss
@@ -39,8 +39,8 @@ $zIndex: (
 
 // Animations
 
-$base-animation-duration: 300ms;
-$base-animation-timing: linear;
+$base-animation-duration: .2s;
+$base-animation-timing: ease-out;
 
 // Layout
 
