--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -20,6 +20,7 @@
 @import 'components/app-hero';
 @import 'components/app-navigation';
 @import 'components/btn';
+@import 'components/btn-toggle';
 @import 'components/form';
 @import 'components/form-mailing-list';
 @import 'components/icon';
