--- a/frontend/stylesheets/components/_btn-toggle.scss
+++ b/frontend/stylesheets/components/_btn-toggle.scss
@@ -5,8 +5,9 @@
   display: flex;
   align-items: center;
 
-  width: sizing.rem(26px);
-  height: sizing.rem(32px);
+  width: sizing.rem(42px);
+  height: sizing.rem(48px);
+  padding: sizing.rem(8px);
 
   cursor: pointer;
 
