Fix incorrect button positoning

--- a/frontend/stylesheets/components/_form-mailing-list.scss
+++ b/frontend/stylesheets/components/_form-mailing-list.scss
@@ -1,6 +1,6 @@
 .form-mailing-list {
-  isolation: isolate;
-
+  position: relative;
+  
   .form__control {
     @include media-breakpoint-up('md') {
       padding-right: 155px;
@@ -8,15 +8,13 @@
   }
 
   .btn {
-    position: relative;
-
     width: 100%;
 
     @include media-breakpoint-up('md') {
       position: absolute;
       top: 9px;
       right: 9px;
-      z-index: map-get($zIndex, 'default');
+      z-index: map-get($zIndex, 'high');
 
       width: auto;
       height: rem(51px);
