--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -16,13 +16,15 @@
 @import 'layouts/default';
 
 @import 'components/app-footer';
+@import 'components/app-header';
 @import 'components/app-hero';
+@import 'components/app-navigation';
 @import 'components/btn';
+@import 'components/btn-toggle';
 @import 'components/form';
 @import 'components/form-mailing-list';
 @import 'components/icon';
 @import 'components/link';
-@import 'components/list';
 @import 'components/list-social-platform';
 @import 'components/list-sponsor';
 @import 'components/logo';
