--- a/frontend/stylesheets/layouts/_default.scss
+++ b/frontend/stylesheets/layouts/_default.scss
@@ -1,31 +1,39 @@
-.layout-default .app-header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.layout-default {
 
-  height: rem(120px);
-}
-
-.layout-default .app-hero {
-  margin-bottom: 1.5rem;
-
-  @include media-breakpoint-up('md') {
-    margin-bottom: 3rem;
+  // `menu--open` is added via the navigation Stimulus controller 
+  body.menu--open {
+    overflow: hidden;
   }
-}
 
-.layout-default .app-content {
-  min-height: rem(400px);
+  .app-header {
+    display: flex;
+    align-items: center;
 
-  &__text {
-    padding: 1.5rem 0;
+    height: var(--app-header-height);
+  }
+  
+
+  .app-hero {
+    margin-bottom: 1.5rem;
 
     @include media-breakpoint-up('md') {
-      padding: 3rem 0;
+      margin-bottom: 3rem;
     }
   }
-}
 
-.layout-default .app-hero ~ .app-content__text {
-  padding-top: 0;
+  .app-content {
+    min-height: rem(400px);
+
+    &__text {
+      padding: 1.5rem 0;
+
+      @include media-breakpoint-up('md') {
+        padding: 3rem 0;
+      }
+    }
+  }
+
+  .app-hero ~ .app-content__text {
+    padding-top: 0;
+  }  
 }
