--- a/src/_components/header.liquid
+++ b/src/_components/header.liquid
@@ -1,7 +1,27 @@
 <header class="app-header">
   <div class="container">
-    <a href="/" class="app-header__logo logo logo--text-icon">
-      <span class="sr-only">RubyConf TH {💎}</span>
+    <a href="{{ '/' | relative_url }}" class="app-header__logo logo logo--text-icon">
+      <span class="visually-hidden">RubyConf TH {💎}</span>
     </a>
+
+    <div class="app-header__navigation" data-controller="navigation">
+      <label class="btn-toggle app-header__toggle">
+        <i class="btn-toggle__icon"></i>
+        <span class="visually-hidden">Toggle Menu</span>
+        <input type="checkbox" name="toggle-menu" class="btn-toggle__input visually-hidden" data-action="navigation#toggleMenu" />
+      </label>
+
+      <nav class="app-navigation">
+        <ul class="app-navigation__list">
+          {% for menu_item in menu_items %}
+          <li class="app-navigation__item">
+            <a href="{{ menu_item.permalink | relative_url }}" class="app-navigation__link">
+              <spn class="app-navigation__text">{{ menu_item.title }}</span>
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
   </div>
 </header>
