--- a/frontend/stylesheets/layouts/_default.scss
+++ b/frontend/stylesheets/layouts/_default.scss
@@ -23,17 +23,14 @@
 
   .app-content {
     min-height: rem(400px);
+    padding: 1.5rem 0;
 
-    &__text {
-      padding: 1.5rem 0;
-
-      @include media-breakpoint-up('md') {
-        padding: 3rem 0;
-      }
+    @include media-breakpoint-up('md') {
+      padding: 3rem 0;
     }
   }
 
-  .app-hero ~ .app-content__text {
+  .app-hero ~ .app-content {
     padding-top: 0;
   }  
 }
