--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ site.locale }}" class="layout-{{ resource.data.layout }}">
+<html lang="{{ site.locale }}" class="layout-default layout-default--home">
   <head>
     {% render "head", metadata: site.metadata, title: resource.data.title %}
 
@@ -16,7 +16,12 @@
 
     <div class="app-hero">
       <div class="container">
-        <div class="app-hero__heading display-1">{{ page.title }}</div>
+        <small class="app-hero__subheading">Bangkok, Thailand</small>
+        <div class="app-hero__heading display-1">9-10 December, 2022</div>
+        <div class="app-hero__heading display-4">Tickets now on sale</div>
+        <a href="https://www.eventpop.me/e/13417/rubyconfth-2022" target="_blank" class="btn btn--outline-light">
+          Buy Tickets {% render "icon", icon: "icon-arrow-right-circle" %}
+        </a>
       </div>
     </div>
 
