Increase bottom spacing for headings in the main content

--- a/frontend/stylesheets/base/_typography.scss
+++ b/frontend/stylesheets/base/_typography.scss
@@ -45,6 +45,10 @@ main ul, ol {
   }
 }
 
+main h2 {
+  margin-bottom: 1.5rem;
+}
+
 // Utility to replicate the logo for any text: Red-Text Black-Text
 // <span>Ruby<span>Conf
 .text-branded {
