Fix flash of element respotioning

--- a/frontend/stylesheets/components/_app-navigation.scss
+++ b/frontend/stylesheets/components/_app-navigation.scss
@@ -17,6 +17,10 @@
     box-shadow: none;
   }
 
+  &__item {
+    display: block;
+  }
+
   &__list {
     display: flex;
     flex-direction: column;
