Add venue general information

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import 'components/app-navigation';
 @import 'components/btn';
 @import 'components/btn-toggle';
+@import 'components/card-venue';
 @import 'components/form';
 @import 'components/form-mailing-list';
 @import 'components/icon';
@@ -30,4 +31,3 @@
 @import 'components/logo';
 
 @import 'screens/home';
-@import 'screens/sponsor';
