--- a/frontend/stylesheets/components/_card-venue.scss
+++ b/frontend/stylesheets/components/_card-venue.scss
@@ -1,25 +1,6 @@
 .card-venue {
-  @include make-row();
-
-  &__image,
-  &__info {
-    @include make-col-ready();
-  }
-
-  &__image {
-    @include make-col(12);
-
-    @include media-breakpoint-up('sm') {
-      @include make-col(8);
-    }
-    
-  }
-
-  &__info {
-    @include make-col(12);
-
-    @include media-breakpoint-up('sm') {
-      @include make-col(4);
-    }
+  @include media-breakpoint-up('sm') {
+    display: flex;
+    gap: 2rem;
   }
 }
