List keynote speakers on the homepage

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -28,6 +28,7 @@
 @import 'components/link';
 @import 'components/list-social-platform';
 @import 'components/list-sponsor';
+@import 'components/list-speaker';
 @import 'components/logo';
 
 @import 'screens/home';
