--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -23,22 +23,6 @@ body.home .app-hero {
   }
 }
 
-body.home .cfp,
-body.home .sponsors {
+body.home .app-content {
   text-align: center;
-
-  &:not(:last-child) {
-    margin-bottom: 4rem
-  }
-
-  @include media-breakpoint-up('md') {
-    @include make-col(6);
-    @include make-col-offset(3);
-  }
-}
-
-body.home .sponsors {
-  .list-sponsor {
-    padding: 2rem 0;
-  }  
 }
